# noesis

./: .gitignore  Cargo.toml  README.md  config.example.toml  pyproject.toml
.cargo/: config.toml
crates/memory/: Cargo.toml
crates/memory/src/: config.rs  db.rs  dream.rs  journal.rs  lib.rs  llm.rs  memory.rs
crates/proxy/: Cargo.toml
crates/proxy/src/: main.rs
memweave/: cli.py
memweave/search/: temporal_decay.py
src/: config.rs  db.rs  dream.rs  llm.rs  main.rs  memory.rs  tui.rs
tests/integration/: test_add_and_index.py  test_cache_lru.py  test_cli_index.py  test_cli_stats.py  test_config_serialization.py  test_custom_strategy.py  test_files_api.py  test_flush.py  test_force_reindex.py  test_index_cache_reuse.py  test_max_results.py  test_min_score.py  test_mmr_diversity.py  test_postprocessors_combined.py  test_query_expansion.py  test_search_hybrid.py  test_search_keyword.py  test_search_vector.py  test_snippet_truncation.py  test_source_filter.py  test_strategy_comparison.py  test_temporal_decay.py
tests/unit/: test_chunking.py  test_embedding_cache.py  test_flush.py  test_hashing.py  test_provider.py  test_search_hybrid.py  test_search_keyword.py  test_search_mmr.py  test_search_postprocessor.py  test_search_temporal_decay.py  test_search_vector.py  test_storage.py  test_store.py  test_vectors.py  test_watcher.py
tests/unit/cli/: test_scaffold.py  test_stats.py
