[package]
name = "noesis-memory"
version.workspace = true
edition.workspace = true

[dependencies]
tokio = { workspace = true }

# Storage
rusqlite = { workspace = true }
sqlite-vec = { workspace = true }

# LLM clients
async-openai = { workspace = true }

# Local embeddings / reranking
fastembed = { workspace = true }
hf-hub = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }

# Error handling
anyhow = { workspace = true }

# Utilities
chrono = { workspace = true }
walkdir = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
tracing = { workspace = true }
